# libqi-python

./: README.md  conanfile.py  execute_build_wheel_linux.sh  execute_build_wheel_macos.sh  pyproject.toml  requirements_linux.txt  requirements_macos.txt
qipython/: common.hpp
