# PEP 518
[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

# PEP 621
[project]
name = "qi"
description = "LibQi Python bindings"
version = "3.1.6"
readme = "README.md"
requires-python = ">=3.7"
license = { "file" = "COPYING" }
keywords=[
    "libqi",
    "qi",
    "naoqi",
    "aldebaran",
    "robotics",
    "robot",
    "nao",
    "pepper",
    "romeo",
    "plato",
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Embedded Systems",
    "Framework :: Robot Framework :: Library",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
maintainers = [
    { name = "Thibault Hervier", email = "thibault@fr2g.io" },
    { email = "framework@aldebaran.com" },
    { name = "Vincent Palancher", email = "vincent.palancher@aldebaran.com" },
    { name = "Jérémy Monnon", email = "jmonnon@aldebaran.com" },
]

[project.urls]
repository = "https://https://github.com/funwithagents/libqi-python"

[tool.scikit-build]
# Rely only on CMake install, not on Python packages detection.
wheel.packages = []

[tool.scikit-build.cmake.define]
# Disable building tests by default when building a wheel.
BUILD_TESTING = "OFF"
